--- a/coding/simple-web/index.html
+++ b/coding/simple-web/index.html
@@ -35,16 +35,22 @@
                 <th>name</th>
                 <th>status</th>
             </tr>
-{% for item in data %}
+{{ range $n,$v := .Lister }}
             <tr>
-                <td>{{ item }}</td>
-                <td>{{ data[item]['status'] }}</td>
+                <td>{{ $n }}</td>
+                <td>{{ $v }}</td>
             </tr>
-{% endfor %}
+{{ end }}
+{{ range $k,$v := .Mapper }}
+            <tr>
+                <td>{{ $k }}</td>
+                <td>{{ $v }}</td>
+            </tr>
+{{ end }}
         </table>
 	</div>
     <div>
-        <form action="/" method="post" enctype="multipart/form-data">
+        <form action="/" method="post" enctype="application/x-www-form-urlencoded">
             <fieldset>
                 <legend>Actions</legend>
 
@@ -63,7 +69,7 @@
         </form>
     </div>
     <div>
-        <p>{{ msg }}</p>
+        <p>{{ .Msg }}</p>
     </div>
 </body>
 </html>
